--- a/index.html
+++ b/index.html
@@ -700,9 +700,9 @@
                             <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> tadeusz@tedicars.pl</a>
                             <a href="tel:+012 345 67890"><i class="fas fa-phone text-primary me-2"></i> +48 790 466 322</a>
                             <div class="d-flex justify-content-start mt-1">
-                                <a class="btn btn-md-square rounded-circle" href="https://www.facebook.com/tedicars/"><i class="fab fa-facebook-f text-primary"></i></a>
-                                <a class="btn btn-md-square rounded-circle" href="https://www.instagram.com/tedicars.pl/"><i class="fab fa-instagram text-primary"></i></a>
-                                <a class="btn btn-md-square rounded-circle" href=""><i class="fab fa-tiktok text-primary"></i></a>
+                                <a class="btn btn-md-square rounded-circle" href="https://www.facebook.com/tedicars/" target="_blank"><i class="fab fa-facebook-f text-primary"></i></a>
+                                <a class="btn btn-md-square rounded-circle" href="https://www.instagram.com/tedicars.pl/" target="_blank"><i class="fab fa-instagram text-primary"></i></a>
+                                <a class="btn btn-md-square rounded-circle" href=""><i class="fab fa-tiktok text-primary" target="_blank"></i></a>
                             </div>
                         </div>
                     </div>
