--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
             <div class="container">
-                <nav class="justify-content-between flex-column flex-lg-row align-items-start align-items-lg-center navbar navbar-expand-lg navbar-light">
+                <nav class="justify-content-between flex-column flex-lg-row align-i tems-start align-items-lg-center navbar navbar-expand-lg navbar-light">
                     <div class="d-flex">
                         <a href="" class="navbar-brand p-0">
-                            <img src="img/napis.jpg" class="img-fluid me-3" alt="Tedicars logo">
+                            <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars"></span>
