--- a/flota.html
+++ b/flota.html
@@ -55,29 +55,28 @@
 
         <!-- Navbar & Hero Start -->
         <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
-            <div class="container">
-                <nav class="justify-content-between flex-column flex-lg-row align-i tems-start align-items-lg-center navbar navbar-expand-lg navbar-light">
-                    <div class="d-flex">
-                        <a href="" class="navbar-brand p-0">
-                            <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                            <span class="fa fa-bars"></span>
-                        </button>
-                    </div>
-                    <div class="d-flex">
-                        <div class="collapse navbar-collapse" id="navbarCollapse">
-                            <div class="navbar-nav mx-auto mt-2 py-0">
-                                <a href="index.html" class="nav-item nav-link active">Strona główna</a>
-                                <a href="flota.html" class="nav-item nav-link">Flota pojazdów</a>
-                                <a href="#" class="nav-item nav-link">Usługi</a>
-                                <a href="#" class="nav-item nav-link">O nas</a>
-                                <a href="#" class="nav-item nav-link">Kontakt</a>
-                            </div>
+            <nav class="justify-content-around flex-column flex-lg-row align-i tems-start align-items-lg-center navbar navbar-expand-lg navbar-light">
+                <div class="d-flex">
+                    <a href="" class="navbar-brand p-0">
+                        <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                        <span class="fa fa-bars"></span>
+                    </button>
+                </div>
+                <div class="d-flex">
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <div class="navbar-nav mx-auto mt-2 py-0">
+                            <a href="index.html" class="nav-item nav-link active">Start</a>
+                            <a href="flota.html" class="nav-item nav-link">Flota</a>
+                            <a class="nav-item nav-link"><s>Usługi</s></a>
+                            <a class="nav-item nav-link"><s>Regulamin</s></a>
+                            <a class="nav-item nav-link"><s>O nas</s></a>
+                            <a class="nav-item nav-link"><s>Kontakt</s></a>
                         </div>
                     </div>
-                </nav>
-            </div>
+                </div>
+            </nav>
         </div>
         <!-- Navbar & Hero End -->
 
@@ -114,7 +113,7 @@
                                     <li class="list-group-item px-0 py-2">7800 PLN brutto (1300 km) / tydzień</li>
                                     <li class="list-group-item px-0 py-2">18000 PLN brutto (3000 km) / miesiąc</li>
                                 </ul>
-                                <a href="#"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -145,7 +144,7 @@
                                     <li class="list-group-item px-0 py-2">x PLN brutto / tydzień</li>
                                     <li class="list-group-item px-0 py-2">x PLN brutto / miesiąc</li>
                                 </ul>
-                                <a href="#"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +175,7 @@
                                     <li class="list-group-item px-0 py-2">3200 PLN brutto (1200 km) / tydzień</li>
                                     <li class="list-group-item px-0 py-2">7800 PLN brutto (3000 km) / miesiąc</li>
                                 </ul>
-                                <a href="#"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -186,18 +185,18 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/w222_1.jpg" alt="Mercedes Klasa S W222">
                             <div class="card-body">
-                                <h5 class="card-title">Mercedes Klasa S W222</h5>
+                                <h5 class="card-title">Mercedes Klasa S Long</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 256 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 258 KM</li>
                                             <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
                                             <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> AWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 7s</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,5s</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -207,7 +206,7 @@
                                     <li class="list-group-item px-0 py-2">7200 PLN brutto (2000 km) / tydzień</li>
                                     <li class="list-group-item px-0 py-2">18000 PLN brutto (5000 km) / miesiąc</li>
                                 </ul>
-                                <a href="#"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -228,7 +227,7 @@
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
                                             <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> AWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 7s</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 5,2s</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -238,7 +237,7 @@
                                     <li class="list-group-item px-0 py-2">6000 PLN brutto (2000 km) / tydzień</li>
                                     <li class="list-group-item px-0 py-2">15000 PLN brutto (5000 km) / miesiąc</li>
                                 </ul>
-                                <a href="#"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -248,18 +247,18 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/w222_2.jpg" alt="Mercedes Klasa S W222">
                             <div class="card-body">
-                                <h5 class="card-title">Mercedes Klasa S W222</h5>
+                                <h5 class="card-title">Mercedes Klasa S Long</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 256 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 258 KM</li>
                                             <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
                                             <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 7s</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,5s</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -269,7 +268,7 @@
                                     <li class="list-group-item px-0 py-2">x PLN brutto / tydzień</li>
                                     <li class="list-group-item px-0 py-2">x PLN brutto / miesiąc</li>
                                 </ul>
-                                <a href="#"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -312,7 +311,7 @@
         <!-- Car Steps End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid footer py-5 wow fadeIn bg-primary" data-wow-delay="0.2s">
+        <div class="container-fluid footer py-5 bg-primary">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -332,11 +331,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-primary mb-4">Podstrony</h4>
-                            <a href="flota.html"><i class="fas fa-angle-right me-2"></i> Flota pojazdów</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Usługi</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Regulamin</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> O nas</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Kontakt</a>
+                            <a href="flota.html"><i class="fas fa-angle-right me-2 text-primary"></i> Flota pojazdów</a>
+                            <a><i class="fas fa-angle-right me-2 text-primary"></i><s> Usługi</s></a>
+                            <a><i class="fas fa-angle-right me-2 text-primary"></i><s> Regulamin</s></a>
+                            <a><i class="fas fa-angle-right me-2 text-primary"></i><s> O nas</s></a>
+                            <a><i class="fas fa-angle-right me-2 text-primary"></i><s> Kontakt</s></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -357,7 +356,7 @@
                             <div class="d-flex justify-content-start mt-1">
                                 <a class="btn btn-md-square rounded-circle" href="https://www.facebook.com/tedicars/" target="_blank"><i class="fab fa-facebook-f text-primary"></i></a>
                                 <a class="btn btn-md-square rounded-circle" href="https://www.instagram.com/tedicars.pl/" target="_blank"><i class="fab fa-instagram text-primary"></i></a>
-                                <a class="btn btn-md-square rounded-circle" href=""><i class="fab fa-tiktok text-primary" target="_blank"></i></a>
+                                <a class="btn btn-md-square rounded-circle" href="" target="_blank"><i class="fab fa-tiktok text-primary"></i></a>
                             </div>
                         </div>
                     </div>
