--- a/flota.html
+++ b/flota.html
@@ -57,7 +57,7 @@
         <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
             <nav class="justify-content-around flex-column flex-lg-row align-i tems-start align-items-lg-center navbar navbar-expand-lg navbar-light">
                 <div class="d-flex">
-                    <a href="" class="navbar-brand p-0">
+                    <a href="index.html" class="navbar-brand p-0">
                         <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -92,22 +92,22 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/jag.png" alt="Jaguar F-type R">
                             <div class="card-body">
-                                <h5 class="card-title">Jaguar F-type R</h5>
+                                <h5 class="card-title fw-bold">Jaguar F-type R</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 550 KM</li>
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img class="me-1" src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 550 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img class="me-1" src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 3,5s</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img class="me-1" src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img class="me-1" src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 3,5s</li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h5 class="card-title pt-3">Cennik:</h5>
+                                <h5 class="card-title fw-bold pt-3">Cennik:</h5>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item px-0 py-2">1800 PLN brutto (300 km) / dzień</li>
                                     <li class="list-group-item px-0 py-2">7800 PLN brutto (1300 km) / tydzień</li>
@@ -123,22 +123,22 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/vette.jpg" alt="Corvette C6">
                             <div class="card-body">
-                                <h5 class="card-title">Corvette C6</h5>
+                                <h5 class="card-title fw-bold">Corvette C6</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 400 KM</li>
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Manualna</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img class="me-1" src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 400 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img class="me-1" src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Manualna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 4,4s</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img class="me-1" src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img class="me-1" src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 4,4s</li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h5 class="card-title pt-3">Cennik:</h5>
+                                <h5 class="card-title fw-bold pt-3">Cennik:</h5>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item px-0 py-2">x PLN brutto / dzień</li>
                                     <li class="list-group-item px-0 py-2">x PLN brutto / tydzień</li>
@@ -154,22 +154,22 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/bmw4.jpg" alt="BMW 4 F33 Kabriolet">
                             <div class="card-body">
-                                <h5 class="card-title">BMW 4 F33 Kabriolet</h5>
+                                <h5 class="card-title fw-bold">BMW 4 F33 Kabriolet</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 245 KM</li>
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img class="me-1" src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 245 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img class="me-1" src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,4s</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img class="me-1" src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img class="me-1" src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,4s</li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h5 class="card-title pt-3">Cennik:</h5>
+                                <h5 class="card-title fw-bold pt-3">Cennik:</h5>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item px-0 py-2">600 PLN brutto (250 km) / dzień</li>
                                     <li class="list-group-item px-0 py-2">3200 PLN brutto (1200 km) / tydzień</li>
@@ -185,22 +185,22 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/w222_1.jpg" alt="Mercedes Klasa S W222">
                             <div class="card-body">
-                                <h5 class="card-title">Mercedes Klasa S Long</h5>
+                                <h5 class="card-title fw-bold">Mercedes Klasa S Long</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 258 KM</li>
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img class="me-1" src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 258 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img class="me-1" src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> AWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,5s</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img class="me-1" src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> AWD</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img class="me-1" src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,5s</li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h5 class="card-title pt-3">Cennik:</h5>
+                                <h5 class="card-title fw-bold pt-3">Cennik:</h5>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item px-0 py-2">1400 PLN brutto (400 km) / dzień</li>
                                     <li class="list-group-item px-0 py-2">7200 PLN brutto (2000 km) / tydzień</li>
@@ -216,22 +216,22 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/bmw7.jpeg" alt="BMW 7 G11">
                             <div class="card-body">
-                                <h5 class="card-title">BMW 7 G11</h5>
+                                <h5 class="card-title fw-bold">BMW 7 G11</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 320 KM</li>
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img class="me-1" src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 320 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img class="me-1" src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> AWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 5,2s</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img class="me-1" src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> AWD</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img class="me-1" src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 5,2s</li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h5 class="card-title pt-3">Cennik:</h5>
+                                <h5 class="card-title fw-bold pt-3">Cennik:</h5>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item px-0 py-2">1200 PLN brutto (400 km) / dzień</li>
                                     <li class="list-group-item px-0 py-2">6000 PLN brutto (2000 km) / tydzień</li>
@@ -247,22 +247,22 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/w222_2.jpg" alt="Mercedes Klasa S W222">
                             <div class="card-body">
-                                <h5 class="card-title">Mercedes Klasa S Long</h5>
+                                <h5 class="card-title fw-bold">Mercedes Klasa S Long</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 258 KM</li>
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
+                                            <li class="list-group-item px-0 py-2" title="Moc silnika"><img class="me-1" src="img/icons/engine.png" alt="Icon" width="24" height="24"/> 258 KM</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj skrzyni biegów"><img class="me-1" src="img/icons/transmission.png" alt="Icon" width="24" height="24"/> Automatyczna</li>
                                         </ul>
                                     </div>
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
-                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,5s</li>
+                                            <li class="list-group-item px-0 py-2" title="Rodzaj napędu"><img class="me-1" src="img/icons/drivetrain.png" alt="Icon" width="24" height="24"/> RWD</li>
+                                            <li class="list-group-item px-0 py-2" title="Przyspieszenie do setki"><img class="me-1" src="img/icons/speedometer.png" alt="Przyspieszenie do setki" width="24" height="24"/> 6,5s</li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h5 class="card-title pt-3">Cennik:</h5>
+                                <h5 class="card-title fw-bold pt-3">Cennik:</h5>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item px-0 py-2">x PLN brutto / dzień</li>
                                     <li class="list-group-item px-0 py-2">x PLN brutto / tydzień</li>
