--- a/flota.html
+++ b/flota.html
@@ -108,11 +108,15 @@
                                     </div>
                                 </div>
                                 <h5 class="card-title fw-bold pt-3">Cennik:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item px-0 py-2">1800 PLN brutto (300 km) / dzień</li>
-                                    <li class="list-group-item px-0 py-2">7800 PLN brutto (1300 km) / tydzień</li>
-                                    <li class="list-group-item px-0 py-2">18000 PLN brutto (3000 km) / miesiąc</li>
+                                <ul class="list-group list-group-flush mb-2">
+                                    <li class="list-group-item px-0 py-2">1500 PLN brutto (250 km) / 1 doba</li>
+                                    <li class="list-group-item px-0 py-2">3900 PLN brutto (650 km) / 3 doby</li>
+                                    <li class="list-group-item px-0 py-2">7800 PLN brutto (1300 km) / 1 tydzień</li>
+                                    <li class="list-group-item px-0 py-2">12600 PLN brutto (2100 km) / 2 tygodnie</li>
+                                    <li class="list-group-item px-0 py-2">18000 PLN brutto (3000 km) / 1 miesiąc</li>
                                 </ul>
+                                <p>Kaucja zwrotna 6000 PLN</p>
+                                <p>5zł / km powyżej limitu</p>
                                 <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
@@ -139,11 +143,15 @@
                                     </div>
                                 </div>
                                 <h5 class="card-title fw-bold pt-3">Cennik:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item px-0 py-2">x PLN brutto / dzień</li>
-                                    <li class="list-group-item px-0 py-2">x PLN brutto / tydzień</li>
-                                    <li class="list-group-item px-0 py-2">x PLN brutto / miesiąc</li>
+                                <ul class="list-group list-group-flush mb-2">
+                                    <li class="list-group-item px-0 py-2">1500 PLN brutto (250 km) / 1 doba</li>
+                                    <li class="list-group-item px-0 py-2">3900 PLN brutto (650 km) / 3 doby</li>
+                                    <li class="list-group-item px-0 py-2">7800 PLN brutto (1300 km) / 1 tydzień</li>
+                                    <li class="list-group-item px-0 py-2">12600 PLN brutto (2100 km) / 2 tygodnie</li>
+                                    <li class="list-group-item px-0 py-2">18000 PLN brutto (3000 km) / 1 miesiąc</li>
                                 </ul>
+                                <p>Kaucja zwrotna 6000 PLN</p>
+                                <p>5zł / km powyżej limitu</p>
                                 <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
@@ -154,7 +162,7 @@
                         <div class="card mb-4 p-2 border-2 border-primary">
                             <img class="card-img-top" src="img/cars/bmw4.jpg" alt="BMW 4 F33 Kabriolet">
                             <div class="card-body">
-                                <h5 class="card-title fw-bold">BMW 4 F33 Kabriolet</h5>
+                                <h5 class="card-title fw-bold">BMW 4 F33 Cabrio / Coupe</h5>
                                 <div class="row">
                                     <div class="col">
                                         <ul class="list-group list-group-flush">
@@ -170,11 +178,15 @@
                                     </div>
                                 </div>
                                 <h5 class="card-title fw-bold pt-3">Cennik:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item px-0 py-2">600 PLN brutto (250 km) / dzień</li>
-                                    <li class="list-group-item px-0 py-2">3200 PLN brutto (1200 km) / tydzień</li>
-                                    <li class="list-group-item px-0 py-2">7800 PLN brutto (3000 km) / miesiąc</li>
+                                <ul class="list-group list-group-flush mb-2">
+                                    <li class="list-group-item px-0 py-2">500* PLN brutto (250 km) / 1 doba</li>
+                                    <li class="list-group-item px-0 py-2">1200* PLN brutto (600 km) / 3 doby</li>
+                                    <li class="list-group-item px-0 py-2">2400* PLN brutto (1200 km) / 1 tydzień</li>
+                                    <li class="list-group-item px-0 py-2">3600* PLN brutto (1800 km) / 2 tygodnie</li>
+                                    <li class="list-group-item px-0 py-2">6000* PLN brutto (3000 km) / 1 miesiąc</li>
                                 </ul>
+                                <p>Kaucja zwrotna 2000 PLN</p>
+                                <p>2zł / km powyżej limitu</p>
                                 <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
@@ -201,11 +213,15 @@
                                     </div>
                                 </div>
                                 <h5 class="card-title fw-bold pt-3">Cennik:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item px-0 py-2">1400 PLN brutto (400 km) / dzień</li>
-                                    <li class="list-group-item px-0 py-2">7200 PLN brutto (2000 km) / tydzień</li>
-                                    <li class="list-group-item px-0 py-2">18000 PLN brutto (5000 km) / miesiąc</li>
+                                <ul class="list-group list-group-flush mb-2">
+                                    <li class="list-group-item px-0 py-2">1200 PLN brutto (300 km) / 1 doba</li>
+                                    <li class="list-group-item px-0 py-2">3000 PLN brutto (750 km) / 3 doby</li>
+                                    <li class="list-group-item px-0 py-2">6000 PLN brutto (1500 km) / 1 tydzień</li>
+                                    <li class="list-group-item px-0 py-2">9000 PLN brutto (2250 km) / 2 tygodnie</li>
+                                    <li class="list-group-item px-0 py-2">15000 PLN brutto (3500 km) / 1 miesiąc</li>
                                 </ul>
+                                <p>Kaucja zwrotna 3000 PLN</p>
+                                <p>3zł / km powyżej limitu</p>
                                 <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
@@ -232,11 +248,15 @@
                                     </div>
                                 </div>
                                 <h5 class="card-title fw-bold pt-3">Cennik:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item px-0 py-2">1200 PLN brutto (400 km) / dzień</li>
-                                    <li class="list-group-item px-0 py-2">6000 PLN brutto (2000 km) / tydzień</li>
-                                    <li class="list-group-item px-0 py-2">15000 PLN brutto (5000 km) / miesiąc</li>
+                                <ul class="list-group list-group-flush mb-2">
+                                    <li class="list-group-item px-0 py-2">800 PLN brutto (300 km) / 1 doba</li>
+                                    <li class="list-group-item px-0 py-2">2000 PLN brutto (750 km) / 3 doby</li>
+                                    <li class="list-group-item px-0 py-2">4000 PLN brutto (1500 km) / 1 tydzień</li>
+                                    <li class="list-group-item px-0 py-2">6800 PLN brutto (2250 km) / 2 tygodnie</li>
+                                    <li class="list-group-item px-0 py-2">10000 PLN brutto (3500 km) / 1 miesiąc</li>
                                 </ul>
+                                <p>Kaucja zwrotna 2000 PLN</p>
+                                <p>2zł / km powyżej limitu</p>
                                 <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
@@ -263,15 +283,21 @@
                                     </div>
                                 </div>
                                 <h5 class="card-title fw-bold pt-3">Cennik:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item px-0 py-2">x PLN brutto / dzień</li>
-                                    <li class="list-group-item px-0 py-2">x PLN brutto / tydzień</li>
-                                    <li class="list-group-item px-0 py-2">x PLN brutto / miesiąc</li>
+                                <ul class="list-group list-group-flush mb-2">
+                                    <li class="list-group-item px-0 py-2">1200 PLN brutto (300 km) / 1 doba</li>
+                                    <li class="list-group-item px-0 py-2">3000 PLN brutto (750 km) / 3 doby</li>
+                                    <li class="list-group-item px-0 py-2">6000 PLN brutto (1500 km) / 1 tydzień</li>
+                                    <li class="list-group-item px-0 py-2">9000 PLN brutto (2250 km) / 2 tygodnie</li>
+                                    <li class="list-group-item px-0 py-2">15000 PLN brutto (3500 km) / 1 miesiąc</li>
                                 </ul>
+                                <p>Kaucja zwrotna 3000 PLN</p>
+                                <p>3zł / km powyżej limitu</p>
                                 <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
+                    <p class="text-center">* ceny obowiązują poza sezonem, w okresie od pażdziernika do końca kwietnia,
+                        w sezonie ceny 40% wyższe (od maja do końca września)</p>
                 </div>
             </div>
         </div>
